The overload `MetaspaceObj::operator new(size_t, MemTag)` was added by JDK-8355003. It is declared nothrow. But it is implemented by calling `AllocateHeap` with the default failure type, e.g. `EXIT_OOM`. If it needs to return null on allocation failure then the failure mode for `AllocateHeap` needs to be changed to `RETURN_NULL`. If it doesn't need to return null, then the nothrow exception specification should be removed, to avoid unnecessary overhead from that specification.
- relates to
-
JDK-8355003 Implement JEP 515: Ahead-of-Time Method Profiling
-
- Resolved
-
- links to
-
Commit(master) openjdk/jdk/01f01b6f
-
Review(master) openjdk/jdk/25596