8358283: Inconsistent failure mode for MetaspaceObj::operator new(size_t, MemTag)

Reviewed-by: kvn, kbarrett