src/hotspot/share/memory/allocation.hpp
@@ -358,7 +358,7 @@ class MetaspaceObj {
                      size_t word_size,
                      Type type) throw();
   // This is used for allocating training data. We are allocating training data in many cases where a GC cannot be triggered.
-  void* operator new(size_t size, MemTag flags) throw();
+  void* operator new(size_t size, MemTag flags);
   void operator delete(void* p) = delete;
 
   // Declare a *static* method with the same signature in any subclass of MetaspaceObj
